time to give a style on the table
