# src/app/api/models.ts
@@ -5,6 +5,7 @@ export { CategoryDto } from './models/category-dto';
 export { CredentialDto } from './models/credential-dto';
 export { ExpenseDto } from './models/expense-dto';
 export { LoginRequest } from './models/login-request';
+export { OperationListsWrapper } from './models/operation-lists-wrapper';
 export { RevenueDto } from './models/revenue-dto';
 export { ThirdPartyDto } from './models/third-party-dto';
 export { UserDto } from './models/user-dto';
